--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
+group = 'com.netsells'
 buildscript {
     ext.kotlin_version = '1.3.41'
     repositories {
