--- a/signinwithapplebutton/build.gradle
+++ b/signinwithapplebutton/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlinx-serialization'
 
 android {
     compileSdkVersion 29
@@ -37,6 +38,7 @@ dependencies {
     implementation "androidx.fragment:fragment:1.2.2"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.20.0"
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'androidx.test.ext:junit:1.1.1'
@@ -49,5 +51,6 @@ dependencies {
 }
 
 repositories {
+    jcenter()
     mavenCentral()
 }
