--- a/signinwithapplebutton/build.gradle
+++ b/signinwithapplebutton/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation "androidx.fragment:fragment:1.2.2"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.20.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$serialization_version"
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'androidx.test.ext:junit:1.1.1'
